tests/cli_tests/gff_to_prot_table/0001_basic.sh.output
Traceback (most recent call last):
  File "/Users/jeffhykin/repos/transit/./src/transit.py", line 23, in <module>
    import pytransit.__main__
  File "/Users/jeffhykin/repos/transit/src/pytransit/__main__.py", line 8, in <module>
    import pytransit.methods
  File "/Users/jeffhykin/repos/transit/src/pytransit/methods/__init__.py", line 1
    import .anova
           ^
SyntaxError: invalid syntax
